--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ input{
 
 label{
      font: 300 16px/1.7 'Open Sans', sans-serif;
-     color: #443729;
+     color: #9e9182;
      cursor: pointer;
 } 
 
